# FastAPI-Mock-Server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  startup.sh
app/: config.py  main.py  route.py
config/: __init__.py  config.py  session.py
depends/: filters.py
models/: __init__.py
models/dashORM/: customer.py  product.py  purchase.py
routes/: customer.py  dashboard.py  main.py  product.py  purchase.py  stats.py
schemas/: __init__.py
schemas/dashSchemas/: customer.py  dashboard.py  product.py  purchase.py
schemas/mainSchemas/: main.py
static/css/: style.css
templates/: 404.html  about.html  contact.html  index.html  portfolio.html  pricing.html  services.html
