[project]
name = "staticserverapi"
version = "0.1.0"
description = ""
authors = [
    {name = "leonardo-lima-98",email = "leonardodelima98@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "staticserverapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
